# Aura

./: .gitignore  API_DOCUMENTATION.md  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  cargo.toml
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/pages/: dashboard_page.dart  discovery_page.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
src/: agents.rs  auth.rs  dashboard.rs  db.rs  discovery.rs  main.rs  models.rs  skills.rs  transactions.rs
